--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Trigger repo
         uses: convictional/trigger-workflow-and-wait@v1.6.1
         with:
-          owner: antonov-aa2702
+          owner: farm-app
           repo: compose-stack
           ref: prod
           github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
